# 2024-12-03-fastpi-dojo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  tasks.py
tests/: test_main.http  test_main.py  test_tasks.py
