[tool.poetry]
name = "2024-12-03-fastpi-dojo"
version = "1.0.0"
description = "FastPI application to manage tasks created during a coding dojo"
authors = ["PyGRAZ Python user group graz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
pydantic = "^2.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
