[project]
name = "2024-12-03-fastpi-dojo"
version = "1.0.0"
description = "FastPI application to manage tasks created during a coding dojo"
authors = ["PyGRAZ Python user group graz"]
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]
